--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 
 body{
     display:flex;
-    align-content: center;
     justify-content: center;
+    align-items:end;
 }
 
 #quote-box{
@@ -15,7 +15,6 @@ body{
     height:50vh;
     border: 2px solid red;
     align-self: center;
-    aspect-ratio: 16 9;
 }
 
 #text-box{
