--- a/styles.css
+++ b/styles.css
@@ -4,23 +4,28 @@
     padding:0;
 }
 
-body{
-    display:flex;
-    justify-content: center;
-    align-items:end;
-}
+body {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
 
 #quote-box{
     width:80vw;
     height:50vh;
     border: 2px solid red;
-    align-self: center;
 }
 
 #text-box{
     width:100%;
     height:85%;
     border:2px solid green;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #bottom-box{
@@ -54,8 +59,7 @@ body{
     height:20%;
     width:90%;
     display:flex;
-    justify-content: flex-end;
-    background-color: brown;
-    margin:auto;
-    margin-top: -10%;
+    margin-top: -10vh;
+    align-items: center;
+    justify-content: end;
 }
