--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
     width:80vw;
     height:50vh;
     border: 2px solid red;
+    max-width:650px;
+    min-width:370px;
 }
 
 #text-box{
@@ -37,13 +39,13 @@ body {
 }
 
 #tweet{
-    width: 80%;
+    width: 60%;
     background-color: aqua;
 }
 
 #new-quote{
     align-self: center;
-    width:15%;
+    width:20%;
     height:70%;
 }
 
