--- a/styles.css
+++ b/styles.css
@@ -3,44 +3,55 @@
     margin:0;
     padding:0;
 }
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');
 
 body {
         width: 100%;
         height: 100vh;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-      }
+        background:linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
+        font-family: 'Raleway', sans-serif;
+        font-weight: bold;
+        background-size: contain;
+    }
 
 
 #quote-box{
     width:80vw;
     height:50vh;
-    border: 2px solid red;
     max-width:650px;
     min-width:370px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 #text-box{
     width:100%;
     height:85%;
-    border:2px solid green;
     display:flex;
     flex-direction: column;
     align-items: center;
+    line-height: 6vh;
+    
 }
 
 #bottom-box{
     width:100%;
     height:15%;
-    border:2px solid blue;
     display:flex;
     justify-content: space-evenly;
+    
 }
 
 #tweet{
     width: 60%;
-    background-color: aqua;
 }
 
 #new-quote{
@@ -51,10 +62,12 @@ body {
 
 #text{
     height:100%;
-    width: 100%;
+    width: 90%;
     display:flex;
     justify-content: center;
     align-items: center;
+    flex-wrap:wrap;
+    font-size: 4vh;
 
 }
 #author{
@@ -64,4 +77,26 @@ body {
     margin-top: -10vh;
     align-items: center;
     justify-content: end;
+    font-size: 3vh;
+}
+
+.fa-square-twitter{
+    height:100%;
+    font-size:6vh;
+}
+
+#new-quote{
+    background-color: black;
+    border-radius: 5px;
+    color:white;
+    font-family: 'Raleway', sans-serif;
+}
+
+a { color: inherit }
+
+.credits{
+    margin-top: 1vh;
+    font-weight: lighter;
+    font-size: 2vh;
+    
 }
